--- a/README.Rmd
+++ b/README.Rmd
@@ -16,7 +16,7 @@ knitr::opts_chunk$set(
 # bis620.2023
 
 <!-- badges: start -->
-[![R-CMD-check](https://github.com/kaneplusplus/bis620.2023/actions/workflows/R-CMD-check.yaml/badge.svg)](https://github.com/kaneplusplus/bis620.2023/actions/workflows/R-CMD-check.yaml)
+[![R-CMD-check](https://github.com/juliastiller/bis620.2023/actions/workflows/r-test.yaml/badge.svg)](https://github.com/juliastiller/bis620.2023/actions/workflows/r-test.yaml)
 <!-- badges: end -->
 
 The goal of bis620.2023 is to ...
@@ -27,17 +27,5 @@ You can install the development version of bis620.2023 from [GitHub](https://git
 
 ``` r
 # install.packages("devtools")
-devtools::install_github("kaneplusplus/bis620.2023")
+devtools::install_github("juliastiller/bis620.2023")
 ```
-
-## Example
-
-This is a basic example which shows you how to solve a common problem:
-
-```{r example}
-library(bis620.2023)
-accel |> 
-  head(100) |> 
-  plot_accel()
-```
-
