--- a/README.Rmd
+++ b/README.Rmd
@@ -16,7 +16,8 @@ knitr::opts_chunk$set(
 # bis620.2023
 
 <!-- badges: start -->
-[![R-CMD-check](https://github.com/juliastiller/bis620.2023/actions/workflows/r-test.yaml/badge.svg)](https://github.com/juliastiller/bis620.2023/actions/workflows/r-test.yaml)
+[![R-CMD-check](https://github.com/juliastiller/bis620.2023/actions/workflows/R-CMD-check.yaml/badge.svg)](https://github.com/juliastiller/bis620.2023/actions/workflows/R-CMD-check.yaml)
+[![test-coverage](https://github.com/juliastiller/bis620.2023/actions/workflows/test-coverage.yaml/badge.svg)](https://github.com/juliastiller/bis620.2023/actions/workflows/test-coverage.yaml)
 <!-- badges: end -->
 
 The goal of bis620.2023 is to empower users to explore clinical trial data with ease. Through filtering options such as keywords, sponsors, status, and FDA regulation, users can efficiently extract information via the ClinicalTrials.gov API. This package caters to researchers, clinicians, and data scientists, offering seamless retrieval and dynamic visualization capabilities. Users can gain valuable insights by exploring trends across different dimensions, including phase, concurrency, condition, country, and intervention.
