--- a/README.Rmd
+++ b/README.Rmd
@@ -17,6 +17,7 @@ knitr::opts_chunk$set(
 
 <!-- badges: start -->
 [![R-CMD-check](https://github.com/juliastiller/bis620.2023/actions/workflows/R-CMD-check.yaml/badge.svg)](https://github.com/juliastiller/bis620.2023/actions/workflows/R-CMD-check.yaml)
+[![R Package Test](https://github.com/juliastiller/bis620.2023/actions/workflows/r-test.yaml/badge.svg)](https://github.com/juliastiller/bis620.2023/actions/workflows/r-test.yaml)
 [![test-coverage](https://github.com/juliastiller/bis620.2023/actions/workflows/test-coverage.yaml/badge.svg)](https://github.com/juliastiller/bis620.2023/actions/workflows/test-coverage.yaml)
 <!-- badges: end -->
 
